introduce internal registry
